# tibros_scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_scraper.sh  tibros.env
.github/workflow/: test.yaml
.github/workflows/: build.yaml  test.yaml  test_and_build.yaml
src/tibros_scraper/: main.py
tests/: test_scraper.py
